@@ -1,5 +1,12 @@
 2006-08-09  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c: Include order fixing.
+	(job_find_by_name): Function to find a job by its (unique) name.
+	(job_find_by_pid): Function to find a job by the pid of its process.
+	* init/job.h: Update.
+	* init/tests/test_job.c (test_find_by_name, test_find_by_pid): Test
+	new functions.
+
 	* init/process.c (process_spawn): Spawn a process using the job
 	details to set up the environment, etc.
 	(process_setup_console): Set up the console according to the job.
